--- a/index.html
+++ b/index.html
@@ -343,22 +343,23 @@ w3IncludeHTML();
                     <p class="lead" align="center">
                       <em></em>
                     </p>
-                    You can register for F4SG workshop on Sunday 10th of July online or in-person. You ahve to register dfor ISF to attend F4SG invited sessions on 11-13 July 2022.
+                    o register for the Sunday, 10 July Workshop, select either online or in-person. To attend F4SG invited sessions on 11-13 July 2022, you must also register to attend the <a href="https://isf.forecasters.org/"> ISF 2022</a>.
+                    
                     <br/>
 
 
                     <p class="lead" align="center">
-<em>Registration Deadline: June 21, 2021</em>
+<em>Registration Deadline: May 03, 2022</em>
                     </p>
                     <p class="lead" align="center">
                     </p>
 <br>
                     <p class="lead" align="center">
-<a href="TBD" target="_blank"><button type="button" class="btn btn-primary btn-lg"> I attend only F4SG workshop- Online </button></a>
+<a href="https://learn.zoom.us/meeting/register/u5Ukc-yprzwpGN0R_G6ga1t35Gq7xA_DaV-L" target="_blank"><button type="button" class="btn btn-primary btn-lg"> F4SG Workshop – Virtual attendance </button></a>
                     </p>
                     
                                         <p class="lead" align="center">
-<a href="TBD" target="_blank"><button type="button" class="btn btn-primary btn-lg"> I attend F4SG workshop and International Symposium of Forecasting</button></a>
+<a href="TBD" target="_blank"><button type="button" class="btn btn-primary btn-lg"> F4SG Worskhop + ISF 2022</button></a>
                     </p>
                 </div>
             </div>
