--- a/program-Day1.html
+++ b/program-Day1.html
@@ -100,7 +100,7 @@
     <div class="session-time col col-md-4">
       10:50 - 12:30 (UTC)
       <br/>
-      Thu, June 24
+      Sunday July 10, 2022
       <br/>
     </div>
   </div>
@@ -334,7 +334,7 @@ This presentation will describe the methodology applied using the available data
 <!-- Start section header -->
 <div class="session-header">
   <div class="row">
-    <div class="session-title col col-md-8">Keynote #3: Demand Forecasting for New Contraceptive Technologies</div>
+    <div class="session-title col col-md-8">Keynote #3: TBD</div>
     <div class="session-time col col-md-4">
       14:00 - 14:30 (UTC)
       <br/>
@@ -368,3 +368,174 @@ This presentation will describe the methodology applied using the available data
   </div>
 </div>
 <!-- End session key3  -->
+<!-- Begin session session2  -->
+<!-- Start section header -->
+<div class="session-header">
+  <div class="row">
+    <div class="session-title col col-md-8">Session #2: Forecasting for International migration and cross-border mobility</div>
+    <div class="session-time col col-md-4">
+      14:35 - 15:35 (UTC)
+      <br/>
+      Sunday July 10, 2022
+      <br/>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="session-chair col col-md-12">Chair: Ingmar G. Weber | Qatar Computing Research Institute</div>
+</div>
+<!-- End section header -->
+<div class="card-group" id="accordion">
+  <div class="row">
+    <div class="col-xs-12 col-sm-12 col-md-1">
+      <div class="ProgramTime">14:35 (UTC)</div>
+    </div>
+    <div class="col-xs-12 col-sm-12 col-md-11">
+      <div class="card card-default">
+        <div class="card-heading">
+          <p class="card-title">
+            <a data-toggle="collapse" data-parent="#accordion" href="#collapsesession21-">Forecasting Global Displacement: Evidence from a Hurdle Model</a>
+          </p>
+          <p class="card-author">David Leblang</p>
+        </div>
+        <div id="collapsesession21-" class="card-collapse collapse">
+          <div class="card-body">Global displacement has increased and accelerated over the past twenty years, resulting from natural disasters, civil and international conflict, and climate change.  While some displacement ‘events’ are relatively small in number, others are large and long lasting.  We develop a model to forecast human displacement using a hurdle model; a model that allows us to distinguish between small and large events.  This model provides support for existing work that finds an important effect of armed conflict; the effect(s) of climate change are weaker.
+</div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-xs-12 col-sm-12 col-md-1">
+      <div class="ProgramTime">15:00 (UTC)</div>
+    </div>
+    <div class="col-xs-12 col-sm-12 col-md-11">
+      <div class="card card-default">
+        <div class="card-heading">
+          <p class="card-title">
+            <a data-toggle="collapse" data-parent="#accordion" href="#collapsesession22-">Ask the experts? A Delphi survey of immigration to the European Union in 2030</a>
+          </p>
+          <p class="card-author"> Eduardo Acostamadiedo</p>
+        </div>
+        <div id="collapsesession22-" class="card-collapse collapse">
+          <div class="card-body">Following the rapid increase of asylum seekers arriving in the European Union in 2015/16, policymakers have invested heavily in improving their foresight and forecasting capabilities. While expert opinion is increasingly solicited, its added value has been questioned. First, we provide expert predictions of immigration to the European Union in 2030 separately for four scenarios and five groups of immigrants. Second, we evaluate the internal consistency of expert estimates and compare them to alternative time series forecasts. We conducted a two-round Delphi survey with 178 migration experts to estimate the size of future international immigration flows. The results are presented descriptively and the impact of expert composition on estimates dispersion is evaluated using regression analysis. We also produce alternative forecasts of immigration using linear extrapolations and an ARIMA model. Results show that experts expect total immigration to increase by 21-44% relative to 2008-17. High-skilled and labour immigration are predicted to increase most notably whereas irregular and forced immigration depend on different scenarios but are generally expected to remain lower than in 2015/16. Despite several efforts to improve reliability, experts tend to have little confidence in their estimates and disagree substantially. The composition of the expert pool does not drive results. Experts can contribute new insights because they make predictions for specific migration flows and scenarios that are unavailable in official statistics. However, whether experts are more accurate than alternative approaches to anticipate migration remains an open question.
+</div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-xs-12 col-sm-12 col-md-1">
+      <div class="ProgramTime">15:25 (UTC)</div>
+    </div>
+    <div class="col-xs-12 col-sm-12 col-md-11">
+      <div class="card card-default">
+        <div class="card-heading">
+          <p class="card-title">
+            <a data-toggle="collapse" data-parent="#accordion" href="#collapsesession23-">Predicting migration flows with digital trace data</a>
+          </p>
+          <p class="card-author">André Gröger</p>
+        </div>
+        <div id="collapsesession23-" class="card-collapse collapse">
+          <div class="card-body">We follow-up on Boehme et al. (2020) and use records of migration-relevant Google searches in migrant origin countries to (i) create close to real-time measure of bilateral migration intentions to EU destination countries, and (ii) develop a framework for predicting migrant arrivals ahead of time.
+</div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-xs-12 col-sm-12 col-md-1">
+      <div class="ProgramTime">15:50 (UTC)</div>
+    </div>
+    <div class="col-xs-12 col-sm-12 col-md-11">
+      <div class="card card-default">
+        <div class="card-heading">
+          <p class="card-title">
+            <a data-toggle="collapse" data-parent="#accordion" href="#collapsesession24-">Forecasting Migration from Ukraine Using Organic Data: Strengths and Limitations</a>
+          </p>
+          <p class="card-author">Lisa Singh</p>
+        </div>
+        <div id="collapsesession24-" class="card-collapse collapse">
+          <div class="card-body">The invasion of Ukraine has created the largest refugee crisis this century. Even though there is on the ground information available about movement, we consider what can and cannot be determined using organic data sources. We collected social media data from Ukrainian language Twitter, geotagged events reported by the open source intelligence community and newspaper articles about the war. These data were aggregated into a set of variables and indicators that attempt to approximate what is happening on the ground.  We develop a Bayesian hierarchical model to estimate which of our organic variables are correlated with actual migration flows as reported by the UNHCR and, just as crucially, what the lag period is between on the ground events and arrivals of migrants. We discuss both the strengths and weaknesses of this approach for just-in-time movement information.
+</div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- End session session2  -->
+<!-- Begin session 3211  -->
+<!-- Start section header -->
+<div class="session-header">
+  <div class="row">
+    <div class="session-title col col-md-8">Break</div>
+    <div class="session-time col col-md-4">
+      16:15 - 16:35 (UTC)
+      <br/>
+      Sunday, July 10
+      <br/>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="session-chair col col-md-12"></div>
+</div>
+<!-- End section header -->
+<!-- End session 3211  -->
+<br/>
+<!-- Begin session key4  -->
+<!-- Start section header -->
+<div class="session-header">
+  <div class="row">
+    <div class="session-title col col-md-8">Keynote #4: How forecasters can create social good</div>
+    <div class="session-time col col-md-4">
+      16:40 - 17:10 (UTC)
+      <br/>
+      Sunday July 10, 2022
+      <br/>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="session-chair col col-md-12">Chair: Aziz Ezzat | Rutgers University</div>
+</div>
+<!-- End section header -->
+<div class="card-group" id="accordion">
+  <div class="row">
+    <div class="col-xs-12 col-sm-12 col-md-1">
+      <div class="ProgramTime">16:40 (UTC)</div>
+    </div>
+    <div class="col-xs-12 col-sm-12 col-md-11">
+      <div class="card card-default">
+        <div class="card-heading">
+          <p class="card-title">
+            <a data-toggle="collapse" data-parent="#accordion" href="#collapsekey41-">How forecasters can create social good</a>
+          </p>
+          <p class="card-author">Rob Hyndman, Monash University</p>
+        </div>
+        <div id="collapsekey41-" class="card-collapse collapse">
+          <div class="card-body">Social good is created whenever we make new forecasting methods and resources freely available and usable. That could take the form of open source software and data, open access papers and textbooks, reproducible source files, and so on. I will discuss progress in this area over the last 25 years, and reflect on my own experiences in publishing forecasting papers, books and software. I will discuss the benefits in working openly and publicly from an academic, commercial, and social good perspective.</div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- End session key4  -->
+<!-- Begin session close1  -->
+<!-- Start section header -->
+<div class="session-header">
+  <div class="row">
+    <div class="session-title col col-md-8">Closing</div>
+    <div class="session-time col col-md-4">
+      17:10 - 17:25 (UTC)
+      <br/>
+      Sunday July 10, 2022
+      <br/>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="session-chair col col-md-12">Chair: Bahman Rostami-Tabar | Cardiff University</div>
+</div>
+<!-- End section header -->
+<!-- End session close1  -->
