--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@ The conference will be held at Kedge Business School in Bordeaux ...
 <tr><td class="lead">Notification to authors: &nbsp;</td><td class="lead"><b>March 27, 2021</b></td>
 -->  
 <tr><td class="lead">Registration deadline: &nbsp;</td><td class="lead"><b>May 03, 2022</b></td><tr>
-<tr><td class="lead">F4SG Workshop: &nbsp;</td><td class="lead"><b>July 10th, 2022</b></td><tr>
-  <tr><td class="lead">F4SG invites sessions - ISF: &nbsp;</td><td class="lead"><b>July 11th-July 13th, 2022</b></td><tr>
+<tr><td class="lead">F4SG Workshop: &nbsp;</td><td class="lead"><b>July 10, 2022</b></td><tr>
+  <tr><td class="lead">F4SG invited sessions - ISF: &nbsp;</td><td class="lead"><b>July 11-July 13, 2022</b></td><tr>
 </table> <br>
 
 <!-- .about-event 
@@ -309,11 +309,11 @@ This will be an ideal venue for authors to publish an extended full paper on the
 <!-- Program Day 1 -->
  <div w3-include-html="program-Day1.html"></div>
 
-<!--
+
  <div class="row">
-   <div class="ProgramDayBreak"><span>Friday June 25, 2021</span></div>
+   <div class="ProgramDayBreak"><span>F4SG invited sessions - ISF (11 -13 July 2022) </span></div>
  </div>
--->
+
 
  <!-- Program Day 2 
   <div w3-include-html="program-Day2.html"></div>-->
@@ -343,7 +343,7 @@ w3IncludeHTML();
                     <p class="lead" align="center">
                       <em></em>
                     </p>
-                    o register for the Sunday, 10 July Workshop, select either online or in-person. To attend F4SG invited sessions on 11-13 July 2022, you must also register to attend the <a href="https://isf.forecasters.org/"> ISF 2022</a>.
+                    To register for the Sunday, 10 July Workshop, select either online or in-person. To attend F4SG invited sessions on 11-13 July 2022, you must also register to attend the <a href="https://isf.forecasters.org/"> ISF 2022</a>.
                     
                     <br/>
 
@@ -355,11 +355,11 @@ w3IncludeHTML();
                     </p>
 <br>
                     <p class="lead" align="center">
-<a href="https://learn.zoom.us/meeting/register/u5Ukc-yprzwpGN0R_G6ga1t35Gq7xA_DaV-L" target="_blank"><button type="button" class="btn btn-primary btn-lg"> F4SG Workshop – Virtual attendance </button></a>
+<a href="https://learn.zoom.us/meeting/register/u5Ukc-yprzwpGN0R_G6ga1t35Gq7xA_DaV-L" target="_blank"><button type="button" class="btn btn-primary btn-lg"> F4SG Workshop | Virtual attendance </button></a>
                     </p>
                     
                                         <p class="lead" align="center">
-<a href="TBD" target="_blank"><button type="button" class="btn btn-primary btn-lg"> F4SG Worskhop + ISF 2022</button></a>
+<a href="https://isf.forecasters.org/registration/" target="_blank"><button type="button" class="btn btn-primary btn-lg"> F4SG Worskhop + ISF 2022 | In-person</button></a>
                     </p>
                 </div>
             </div>
