--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@ This will be an ideal venue for authors to publish an extended full paper on the
 			 <div class="row text-center">
 				 <div class="col-sm-3 col-md-3">
                     <figure class="thumbnail">
-                        <a href="https://robjhyndman.com/" target="_blank"><img src="img/rjh.png" class="responsive" alt="Image" height="150px"></a>
+                        <a href="https://robjhyndman.com/" target="_blank"><img src="img/rjh.jpeg" class="responsive" alt="Image"></a>
                         <figcaption class="caption text-center">
                             <h3>Rob J. Hyndman
                                 <small> Professor of Statistics <hr> Monash University </small>
