--- a/program-Day1.html
+++ b/program-Day1.html
@@ -1,4 +1,4 @@
-<!-- Begin session 4631  -->
+<!-- Begin session 3011  -->
 <!-- Start section header -->
 <div class="session-header">
   <div class="row">
@@ -15,7 +15,7 @@
   <div class="session-chair col col-md-12"></div>
 </div>
 <!-- End section header -->
-<!-- End session 4631  -->
+<!-- End session 3011  -->
 <br/>
 <!-- Begin session welcome_1  -->
 <!-- Start section header -->
@@ -427,7 +427,7 @@ This presentation will describe the methodology applied using the available data
   </div>
 </div>
 <!-- End session session2  -->
-<!-- Begin session 4039  -->
+<!-- Begin session 3937  -->
 <!-- Start section header -->
 <div class="session-header">
   <div class="row">
@@ -444,7 +444,7 @@ This presentation will describe the methodology applied using the available data
   <div class="session-chair col col-md-12"></div>
 </div>
 <!-- End section header -->
-<!-- End session 4039  -->
+<!-- End session 3937  -->
 <br/>
 <!-- Begin session session3  -->
 <!-- Start section header -->
@@ -517,7 +517,7 @@ prevent narrowing our focus in one direction, one region, or one cause?</div>
 <!-- Start section header -->
 <div class="session-header">
   <div class="row">
-    <div class="session-title col col-md-8">featured talk #4: TBD</div>
+    <div class="session-title col col-md-8">Featured talk #4: TBD</div>
     <div class="session-time col col-md-4">
       15:05 - 15:35 (UTC)
       <br/>
