--- a/program-Day1.html
+++ b/program-Day1.html
@@ -1,4 +1,4 @@
-<!-- Begin session 3011  -->
+<!-- Begin session 1442  -->
 <!-- Start section header -->
 <div class="session-header">
   <div class="row">
@@ -15,7 +15,7 @@
   <div class="session-chair col col-md-12"></div>
 </div>
 <!-- End section header -->
-<!-- End session 3011  -->
+<!-- End session 1442  -->
 <br/>
 <!-- Begin session welcome_1  -->
 <!-- Start section header -->
@@ -427,7 +427,7 @@ This presentation will describe the methodology applied using the available data
   </div>
 </div>
 <!-- End session session2  -->
-<!-- Begin session 3937  -->
+<!-- Begin session 2016  -->
 <!-- Start section header -->
 <div class="session-header">
   <div class="row">
@@ -444,7 +444,7 @@ This presentation will describe the methodology applied using the available data
   <div class="session-chair col col-md-12"></div>
 </div>
 <!-- End section header -->
-<!-- End session 3937  -->
+<!-- End session 2016  -->
 <br/>
 <!-- Begin session session3  -->
 <!-- Start section header -->
@@ -555,7 +555,7 @@ prevent narrowing our focus in one direction, one region, or one cause?</div>
 <!-- Start section header -->
 <div class="session-header">
   <div class="row">
-    <div class="session-title col col-md-8">Closing &amp; call for support F4SG activities</div>
+    <div class="session-title col col-md-8">Closing &amp; call for support of F4SG activities</div>
     <div class="session-time col col-md-4">
       15:40 - 16:00 (UTC)
       <br/>
