--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@ This will be an ideal venue for authors to publish an extended full paper on the
                     <figure class="thumbnail">
                         <a href="https://www.darden.virginia.edu/faculty-research/directory/yael-grushka-cockayne" target="_blank"><img src="img/marren.jpeg" class="responsive" alt="Image"></a>
                         <figcaption class="caption text-center">
-                            <h3>M. (Maarten) van Smeden
+                            <h3>Maarten Van Smeden
                                 <small>Assistant Professor, Medical statistician and epidemiologist <hr> University Medical Center Utrecht</small>
                             </h3>
                         </figcaption>
