--- a/program-Day1.html
+++ b/program-Day1.html
@@ -1,4 +1,4 @@
-<!-- Begin session 1442  -->
+<!-- Begin session 3004  -->
 <!-- Start section header -->
 <div class="session-header">
   <div class="row">
@@ -15,7 +15,7 @@
   <div class="session-chair col col-md-12"></div>
 </div>
 <!-- End section header -->
-<!-- End session 1442  -->
+<!-- End session 3004  -->
 <br/>
 <!-- Begin session welcome_1  -->
 <!-- Start section header -->
@@ -316,7 +316,7 @@ This presentation will describe the methodology applied using the available data
 <!-- Start section header -->
 <div class="session-header">
   <div class="row">
-    <div class="session-title col col-md-8">Featured talk #3: TBD</div>
+    <div class="session-title col col-md-8">Featured talk #3: Prediction modeling in clinical healthcare (TBC)</div>
     <div class="session-time col col-md-4">
       12:35 - 13:05 (UTC)
       <br/>
@@ -340,7 +340,7 @@ This presentation will describe the methodology applied using the available data
           <p class="card-title">
             <a data-toggle="collapse" data-parent="#accordion" href="#collapsekey31-">TBD</a>
           </p>
-          <p class="card-author">M. (Maarten) van Smeden</p>
+          <p class="card-author">Maarten van Smeden</p>
         </div>
         <div id="collapsekey31-" class="card-collapse collapse">
           <div class="card-body">TBD</div>
@@ -427,7 +427,7 @@ This presentation will describe the methodology applied using the available data
   </div>
 </div>
 <!-- End session session2  -->
-<!-- Begin session 2016  -->
+<!-- Begin session 1048  -->
 <!-- Start section header -->
 <div class="session-header">
   <div class="row">
@@ -444,7 +444,7 @@ This presentation will describe the methodology applied using the available data
   <div class="session-chair col col-md-12"></div>
 </div>
 <!-- End section header -->
-<!-- End session 2016  -->
+<!-- End session 1048  -->
 <br/>
 <!-- Begin session session3  -->
 <!-- Start section header -->
