--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@ This will be an ideal venue for authors to publish an extended full paper on the
 
 
  <div class="row">
-   <div class="ProgramDayBreak"><span>F4SG invited sessions - ISF | In-person <br> 11 -13 July 2022 </span></div>
+   <div class="ProgramDayBreak"><span>F4SG invited sessions - ISF <br> 11 -13 July 2022 </span></div>
  </div>
 
 
