--- a/program-Day1.html
+++ b/program-Day1.html
@@ -1,4 +1,4 @@
-<!-- Begin session 3004  -->
+<!-- Begin session 3330  -->
 <!-- Start section header -->
 <div class="session-header">
   <div class="row">
@@ -15,7 +15,7 @@
   <div class="session-chair col col-md-12"></div>
 </div>
 <!-- End section header -->
-<!-- End session 3004  -->
+<!-- End session 3330  -->
 <br/>
 <!-- Begin session welcome_1  -->
 <!-- Start section header -->
@@ -316,7 +316,7 @@ This presentation will describe the methodology applied using the available data
 <!-- Start section header -->
 <div class="session-header">
   <div class="row">
-    <div class="session-title col col-md-8">Featured talk #3: Prediction modeling in clinical healthcare (TBC)</div>
+    <div class="session-title col col-md-8">Featured talk #3: Prognosis-based medicine: merits and pitfalls of forecasting patient health</div>
     <div class="session-time col col-md-4">
       12:35 - 13:05 (UTC)
       <br/>
@@ -338,12 +338,12 @@ This presentation will describe the methodology applied using the available data
       <div class="card card-default">
         <div class="card-heading">
           <p class="card-title">
-            <a data-toggle="collapse" data-parent="#accordion" href="#collapsekey31-">TBD</a>
+            <a data-toggle="collapse" data-parent="#accordion" href="#collapsekey31-">Prognosis-based medicine: merits and pitfalls of forecasting patient health</a>
           </p>
           <p class="card-author">Maarten van Smeden</p>
         </div>
         <div id="collapsekey31-" class="card-collapse collapse">
-          <div class="card-body">TBD</div>
+          <div class="card-body">Accurate forecasting of the health of individual patients (prognostication) is widely recognized as one of the key challenges in medicine. Accurate and individualized forecasting is becoming even more essential with the increasing calls to move away from one-size-fits-all healthcare, to disease treatment and prevention strategies that are tailored to the individual -- often called “precision medicine”. In this talk, I will reflect on the (long) history of prognostication, provide some examples where adequate prognostication has worked and where it has not. Some key future challenges for forecasting of patient health will be discussed</div>
         </div>
       </div>
     </div>
@@ -427,7 +427,7 @@ This presentation will describe the methodology applied using the available data
   </div>
 </div>
 <!-- End session session2  -->
-<!-- Begin session 1048  -->
+<!-- Begin session 2611  -->
 <!-- Start section header -->
 <div class="session-header">
   <div class="row">
@@ -444,7 +444,7 @@ This presentation will describe the methodology applied using the available data
   <div class="session-chair col col-md-12"></div>
 </div>
 <!-- End section header -->
-<!-- End session 1048  -->
+<!-- End session 2611  -->
 <br/>
 <!-- Begin session session3  -->
 <!-- Start section header -->
