adding rebecca talk

--- a/program-Day1.html
+++ b/program-Day1.html
@@ -1,4 +1,4 @@
-<!-- Begin session 3330  -->
+<!-- Begin session 3054  -->
 <!-- Start section header -->
 <div class="session-header">
   <div class="row">
@@ -15,7 +15,7 @@
   <div class="session-chair col col-md-12"></div>
 </div>
 <!-- End section header -->
-<!-- End session 3330  -->
+<!-- End session 3054  -->
 <br/>
 <!-- Begin session welcome_1  -->
 <!-- Start section header -->
@@ -427,7 +427,7 @@ This presentation will describe the methodology applied using the available data
   </div>
 </div>
 <!-- End session session2  -->
-<!-- Begin session 2611  -->
+<!-- Begin session 1818  -->
 <!-- Start section header -->
 <div class="session-header">
   <div class="row">
@@ -444,7 +444,7 @@ This presentation will describe the methodology applied using the available data
   <div class="session-chair col col-md-12"></div>
 </div>
 <!-- End section header -->
-<!-- End session 2611  -->
+<!-- End session 1818  -->
 <br/>
 <!-- Begin session session3  -->
 <!-- Start section header -->
@@ -511,6 +511,25 @@ prevent narrowing our focus in one direction, one region, or one cause?</div>
       </div>
     </div>
   </div>
+  <div class="row">
+    <div class="col-xs-12 col-sm-12 col-md-1">
+      <div class="ProgramTime">15:25 (UTC)</div>
+    </div>
+    <div class="col-xs-12 col-sm-12 col-md-11">
+      <div class="card card-default">
+        <div class="card-heading">
+          <p class="card-title">
+            <a data-toggle="collapse" data-parent="#accordion" href="#collapsesession33-">Forecasting Migration from Ukraine Using Organic Data: Strengths and Limitations</a>
+          </p>
+          <p class="card-author">Lisa Singh</p>
+        </div>
+        <div id="collapsesession33-" class="card-collapse collapse">
+          <div class="card-body">The invasion of Ukraine has created the largest refugee crisis this century. Even though there is on the ground information available about movement, we consider what can and cannot be determined using organic data sources. We collected social media data from Ukrainian language Twitter, geotagged events reported by the open source intelligence community and newspaper articles about the war. These data were aggregated into a set of variables and indicators that attempt to approximate what is happening on the ground.  We develop a Bayesian hierarchical model to estimate which of our organic variables are correlated with actual migration flows as reported by the UNHCR and, just as crucially, what the lag period is between on the ground events and arrivals of migrants. We discuss both the strengths and weaknesses of this approach for just-in-time movement information.
+</div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 <!-- End session session3  -->
 <!-- Begin session key4  -->
@@ -519,7 +538,7 @@ prevent narrowing our focus in one direction, one region, or one cause?</div>
   <div class="row">
     <div class="session-title col col-md-8">Featured talk #4: TBD</div>
     <div class="session-time col col-md-4">
-      15:05 - 15:35 (UTC)
+      15:50 - 16:20 (UTC)
       <br/>
       Sunday July 10, 2022
       <br/>
@@ -533,7 +552,7 @@ prevent narrowing our focus in one direction, one region, or one cause?</div>
 <div class="card-group" id="accordion">
   <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-1">
-      <div class="ProgramTime">15:05 (UTC)</div>
+      <div class="ProgramTime">15:50 (UTC)</div>
     </div>
     <div class="col-xs-12 col-sm-12 col-md-11">
       <div class="card card-default">
@@ -557,7 +576,7 @@ prevent narrowing our focus in one direction, one region, or one cause?</div>
   <div class="row">
     <div class="session-title col col-md-8">Closing &amp; call for support of F4SG activities</div>
     <div class="session-time col col-md-4">
-      15:40 - 16:00 (UTC)
+      16:25 - 16:40 (UTC)
       <br/>
       Sunday July 10, 2022
       <br/>
