--- a/program-Day1.html
+++ b/program-Day1.html
@@ -519,13 +519,12 @@ prevent narrowing our focus in one direction, one region, or one cause?</div>
       <div class="card card-default">
         <div class="card-heading">
           <p class="card-title">
-            <a data-toggle="collapse" data-parent="#accordion" href="#collapsesession33-">Forecasting Migration from Ukraine Using Organic Data: Strengths and Limitations</a>
+            <a data-toggle="collapse" data-parent="#accordion" href="#collapsesession33-">Predictive Analytics at UNHCR</a>
           </p>
-          <p class="card-author">Lisa Singh</p>
+          <p class="card-author">Rebeca Moreno Jimenez</p>
         </div>
         <div id="collapsesession33-" class="card-collapse collapse">
-          <div class="card-body">The invasion of Ukraine has created the largest refugee crisis this century. Even though there is on the ground information available about movement, we consider what can and cannot be determined using organic data sources. We collected social media data from Ukrainian language Twitter, geotagged events reported by the open source intelligence community and newspaper articles about the war. These data were aggregated into a set of variables and indicators that attempt to approximate what is happening on the ground.  We develop a Bayesian hierarchical model to estimate which of our organic variables are correlated with actual migration flows as reported by the UNHCR and, just as crucially, what the lag period is between on the ground events and arrivals of migrants. We discuss both the strengths and weaknesses of this approach for just-in-time movement information.
-</div>
+          <div class="card-body">Humanitarian agencies are leveraging big data analytics and emerging technologies, like artificial intelligence to anticipate humanitarian action. In the past years, UNHCR Innovation has been working with forecasting and predictive analytics in forced displacement context from rural areas to urban areas. In this session we will address some of the ethical and data protection considerations that need to be taken when forecasting forced displacement, with examples from Somalia and Brazil.</div>
         </div>
       </div>
     </div>
